[gd_scene load_steps=5 format=3 uid="uid://b2olg0a74vtmh"]

[ext_resource type="Script" path="res://inventory/inventory_display.gd" id="1_ht7p8"]
[ext_resource type="Texture2D" uid="uid://b1en86lay4y7l" path="res://icon.svg" id="1_ltoqc"]
[ext_resource type="Texture2D" uid="uid://ba8hyj0ftagx2" path="res://assets/textures/gui/book_bg.png" id="2_7wfaa"]
[ext_resource type="PackedScene" uid="uid://cremvdxvlgaus" path="res://inventory/inventory_list.tscn" id="2_e0egu"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ht7p8")

[node name="BookBg" type="Sprite2D" parent="."]
position = Vector2(126, 104)
texture = ExtResource("2_7wfaa")

[node name="Info" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 40.0
offset_top = 128.0
offset_right = 216.0
offset_bottom = 192.0
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="ItemTexture" type="TextureRect" parent="Info"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_ltoqc")
expand_mode = 5

[node name="Description" type="RichTextLabel" parent="Info"]
custom_minimum_size = Vector2(108, 56)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_font_sizes/bold_italics_font_size = 8
theme_override_font_sizes/italics_font_size = 8
theme_override_font_sizes/mono_font_size = 8
theme_override_font_sizes/normal_font_size = 8
theme_override_font_sizes/bold_font_size = 8
text = "A glass flute that awakens sleeping monsters..."

[node name="InventoryList" parent="." instance=ExtResource("2_e0egu")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 115.0
offset_top = 17.0
offset_right = 257.0
offset_bottom = 122.0
size_flags_horizontal = 3

[node name="CategoryLabel" type="Label" parent="."]
layout_mode = 2
offset_top = 18.0
offset_right = 100.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 9
text = "< Items >"
horizontal_alignment = 1
